samples/_failures_safe/1761393136_7d53f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfc809f6.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_cfc809f6.c:167:5: error: expected expression at end of input
  167 |     int valid =
      |     ^~~
./samples/SAFE/__tmp_cfc809f6.c:167:5: error: expected declaration or statement at end of input
